k8s/klipper/service.yml
apiVersion: v1
kind: Service
metadata:
  name: klipper-service
  namespace: klipper
spec:
  selector:
    app: klipper
  ports:
    - protocol: TCP
      port: 7125
      targetPort: 7125
      name: http
  type: LoadBalancer
